--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    --backgroundColor: #205e60;
+    --primaryTextColor: #fefefc;
 }
