--- a/index.css
+++ b/index.css
@@ -1,15 +1,20 @@
 body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
-    --backgroundColor: #205e60;
+    --primaryBackgroundColor: #205e60;
     --primaryTextColor: #fefefc;
     --primaryBorderColor: #caced1;
-    --secondaryTextColor: #c0bec5;
+    --secondaryTextColor: #a4a2a7;
     --secondaryBackgroundColor: #fefefd;
+    --primaryButtonColor: #008CBA;
+    --primaryButtonColorHover: #006f94;
+    --secondaryButtonColor: #e7e7e7;
+    --secondaryButtonColorHover: #f6f1f1;
     --arrowUrl :  url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23131313%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E");
 }
 
-body .inputs{
+
+.inputs{
     font-size: 1rem;
     padding: 0.5em 1em 0.5em 0.5em;
     border: 1px solid var(--primaryBorderColor);
@@ -17,3 +22,4 @@ body .inputs{
     color: var(--primaryTextColor);
     cursor: pointer;
 }
+
