--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,7 +1,7 @@
 
 .icons {
     font-size: 1rem;
-    color: var(--secondaryTextColor);
+    color: var(--primaryBorderColor);
     height: 15px;
     margin: 0 3px 3px 0;
 }
@@ -9,7 +9,6 @@
 .input_container {
     display: flex;
     align-items: center;
-    background-color: var(--secondaryBackgroundColor);
 }
 
 .input_container input{
@@ -17,9 +16,12 @@
     box-shadow: none;
     outline: none;
     background: transparent;
+    color:var(--primaryTextColor);
+    font-size: 1.2rem;
+    border-bottom:  1px solid var(--secondaryTextColor);
 }
 
 .input_container input::placeholder {
     font-weight: lighter;
-    color: var(--secondaryTextColor);
+    color: var(--primaryBorderColor);
 }
