--- a/src/layout/newsPage/FilterMenu/FilterMenu.css
+++ b/src/layout/newsPage/FilterMenu/FilterMenu.css
@@ -1,6 +1,5 @@
 .filters{
     position: fixed;
-    background: rgba(0, 0, 0, 0.5);
     height: 100%;
     width: 100%;
     margin: 0;
@@ -11,33 +10,50 @@
 
 .filters .filter_section{
     width: 100%;
-    max-width: 300px;
     background-color: var(--primaryBackgroundColor);
     min-height: 500px;
     height: 100%;
     overflow-y: scroll;
     position: relative;
-    padding: 10px 15px;
+    padding: 10px 30px 10px 25px;
     transition: all 500ms ease;
 }
 
-.filters .filter_section .title_container{
+.filters .filter_section .filters_form{
+    width: 85%;
+}
+
+@media only screen and (width > 500px) {
+    .filters .filter_section{
+        max-width: 300px;
+        border-right:  2px solid var(--primaryBorderColor);
+        -webkit-box-shadow: 13px 2px 104px -71px rgba(0,0,0,0.75);
+        -moz-box-shadow: 13px 2px 104px -71px rgba(0,0,0,0.75);
+        box-shadow: 13px 2px 104px -71px rgba(0,0,0,0.75);
+    }
+    .filters .filter_section .filters_form{
+        width: 100%;
+    }
+    
+}
+
+.filters .filter_section .filters_form .title_container{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     color: var(--primaryTextColor)
 }
 
-.filters .filter_section .filter_container{
+.filters .filter_section .filters_form .filter_container{
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-.filters .filter_section .button_container {
+.filters .filter_section .filters_form .button_container {
     display: flex;
     flex-direction: row;
     width: 100%;
-    gap:10px;
-    margin: 15px 0 25px 0;
+    justify-content: space-around;
+    margin: 15px 0 35px 0;
 }
